# torchprof

./: README.md  README.org  annotate-demo.ipynb  demo.ipynb  profile-demo.ipynb  pyproject.toml
torchprof/: __init__.py  annotate.py  event.py  format.py  profile.py  trace.py  tree.py
